--- a/Agroculture/Agroculture.csproj
+++ b/Agroculture/Agroculture.csproj
@@ -58,6 +58,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Helpers\CalculationHelper.cs" />
+    <Compile Include="Helpers\FieldUIHelper.cs" />
     <Compile Include="Services\JsonDataService.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
