--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -1,4 +1,4 @@
-name: .NET Core Desktop CI
+name: .NET Core Desktop
 
 on:
   push:
@@ -7,35 +7,32 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build-and-test:
-    runs-on: windows-latest
+
+  build:
+
     strategy:
       matrix:
         configuration: [Debug, Release]
 
+    runs-on: windows-latest  # For a list of available runner types, refer to
+                             # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
+
     env:
-      SOLUTION_NAME: Agroculture.sln
-      TEST_PROJECT: Tests/Agroculture.Tests/Agroculture.Tests.csproj
-
+      Solution_Name: Agroculture.sln                      # Replace with your solution name, i.e. MyWpfApp.sln.
+      Test_Project_Path: your-test-project-path                 # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
+    
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
-      - name: Setup .NET SDK
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: 8.0.x
+    # Install the .NET Core workload
+    - name: Install .NET Core
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 8.0.x
 
-      - name: Restore dependencies
-        run: dotnet restore ${{ env.SOLUTION_NAME }}
-
-      - name: Build solution (${{ matrix.configuration }})
-        run: dotnet build ${{ env.SOLUTION_NAME }} --configuration ${{ matrix.configuration }} --no-restore
-
-      - name: Run unit tests (${{ matrix.configuration }})
-        run: dotnet test ${{ env.TEST_PROJECT }} \
-                --configuration ${{ matrix.configuration }} \
-                --no-build \
-                --verbosity normal
+    # Execute all unit tests in the solution
+    - name: Execute unit tests
+      run: dotnet test
